# jcath-plugin

./: .gitignore  CLAUDE.md  README.md  jcatch.spec  plugin.json  pyproject.toml
jcatch-scraper-js/: README.md  index.js  package.json
jcatch-scraper-js/utils/: downloader.js  extractor.js  image-cropper.js  nfo-generator.js  poster-scraper.js  scraper.js
jcatch_plugin/: __init__.py  main.py  models.py  nfo.py  requirements.txt
jcatch_plugin/scrapers/: __init__.py  base.py  javbus.py  javwine.py  www324jav.py
jcatch_plugin/scrapers/decorators/: __init__.py  base_decorator.py  poster_decorator.py
jcatch_plugin/utils/: downloader.py  file.py
